--- a/index.html
+++ b/index.html
@@ -1,2 +1,8 @@
 <h1>Oi mundo!</h1>
 <p>Meu site de música tá vindo aí 🎶</p>
+
+<audio controls>
+  <source src="George Michael - Careless Whisper (Official Video) (2).mp3" type="audio/mpeg">
+  Seu navegador não suporta o áudio.
+</audio>
+
