--- a/index.html
+++ b/index.html
@@ -3,6 +3,5 @@
 
 <audio controls>
   <source src="George Michael - Careless Whisper (Official Video) (2).mp3" type="audio/mpeg">
-  Seu navegador não suporta o áudio.
+  Seu navegador não suporta o elemento de áudio.
 </audio>
-
